--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "artist-agency",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://www.liquiddigital.services/portfolio/artistagency",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
